--- a/roles/s3_create_bucket/tasks/assert.yml
+++ b/roles/s3_create_bucket/tasks/assert.yml
@@ -13,9 +13,9 @@
       - "s3_create_bucket_bucket_name | regex_search('^[a-z0-9][a-z0-9-_.]{1,61}[a-z0-9]$')"
       - "s3_create_bucket_cors_settings is boolean"
       - "s3_create_bucket_allowed_origins is sequence"
-      - "s3_create_bucket_allowed_methods | type_debug == 'list'"
-      - "s3_create_bucket_allowed_headers | type_debug == 'list'"
-      - "s3_create_bucket_expose_headers | type_debug == 'list'"
+      - "s3_create_bucket_allowed_methods is sequence"
+      - "s3_create_bucket_allowed_headers is sequence"
+      - "s3_create_bucket_expose_headers is sequence"
       - "s3_create_bucket_max_age_seconds is integer"
 
 - name: "Assert that livecycle rules are defined and have the correct type"
