--- a/roles/scalelite/defaults/main.yml
+++ b/roles/scalelite/defaults/main.yml
@@ -155,6 +155,7 @@ scalelite_modsec_after: |
   SecRule REQUEST_URI "@contains /greenlight/api/v1/admin/site_settings"        "id:1009, phase:1, pass, nolog,   allow"
   SecRule REQUEST_URI "@contains /greenlight/api/v1/admin/rooms_configurations" "id:1010, phase:1, pass, nolog,   allow"
   SecRule REQUEST_URI "@contains /greenlight/api/v1/admin/users"                "id:1011, phase:1, pass, nolog,   allow"
+  SecRule REQUEST_URI "@contains /greenlight/api/v1/admin/invitations"          "id:1012, phase:1, pass, nolog,   allow"
   SecAction "id:980145,phase:5,pass,t:none,log,noauditlog, msg:'Incoming and Outgoing Score: %{TX.ANOMALY_SCORE} %{TX.OUTBOUND_ANOMALY_SCORE}'"
   SecRuleRemoveById 980130
 
