--- a/roles/s3_create_bucket/tasks/main.yml
+++ b/roles/s3_create_bucket/tasks/main.yml
@@ -1,10 +1,11 @@
 ---
-- ansible.builtin.import_tasks: "assert.yml"
+- name: "Import asserts"
+  ansible.builtin.import_tasks: "assert.yml"
 
 - name: "Create an s3key for IONOS DCD"
   ionoscloudsdk.ionoscloud.s3key:
     token: "{{ s3_create_bucket_ionos_token | default(ionos_token, true) }}"
-    user: "{{ s3_create_bucket_ionos_user | default(ionos_username | default(omit)) }}"
+    user: "{{ s3_create_bucket_owner | default(omit, true) }}"
     idempotency: true
   register: s3_create_bucket_r_s3_key
 
