--- a/roles/privacyidea_ha/tasks/main.yml
+++ b/roles/privacyidea_ha/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - import_tasks: prepare.yml
 - import_tasks: setup_directories.yml
+- import_tasks: install_packages.yml
 - import_tasks: install_privacyidea.yml
 - import_tasks: generate_keys.yml
 - import_tasks: configure_privacyidea.yml
