--- a/roles/scalelite/tasks/main.yml
+++ b/roles/scalelite/tasks/main.yml
@@ -167,18 +167,16 @@
   when: scalelite_clamav_enabled
 
 - name: Greenlight extra instances custom_locale
-  include_tasks: greenlight-locale.yml
-  args:
+  include_tasks:
+    file: greenlight-locale.yml
     apply:
       tags:
         - test
   loop: "{{ scalelite_greenlight_extra_instances | selectattr('bbb_greenlight_custom_locale', 'defined') | subelements('bbb_greenlight_custom_locale') }}"
-  # loop: "{{ scalelite_greenlight_extra_instances }}"
-  # # loop: "{{ scalelite_greenlight_extra_instances.greenlight_extra_instances }}"
-  # loop_control: 
-  # #   # label: "{{ item.overlay_name }}"
-  #   label: "{{ item.bbb_greenlight_custom_locale.overlay_name }}"
-  tags: test
+  loop_control:
+    label: "{{ item.1 }}"
+  tags:
+    - test
   ## debug
 
 - name: Certbot
