--- a/roles/monitoring_bbb_crds/tasks/main.yml
+++ b/roles/monitoring_bbb_crds/tasks/main.yml
@@ -36,13 +36,12 @@
           password:
             name: "{{ bbb_node_exporter_basic_auth_secret_name }}"
             key: password
+        jobName: "{{ bbb_instance_name }}-scalelite"
+        scheme: https 
+        metricsPath: /metrics
+        scrapeInterval: "{{ bbb_monitoring_scrape_interval }}"
+        scrapeTimeout: "{{ bbb_monitoring_scrape_timeout }}"
+        relabelConfigs: "{{ bbb_prometheus_scalelite_relabel_configs }}"
         staticConfigs:
-          - jobName: "{{ bbb_instance_name }}-scalelite"
-            scheme: https
-            metricsPath: /metrics
-            scrapeInterval: "{{ bbb_monitoring_scrape_interval }}"
-            scrapeTimeout: "{{ bbb_monitoring_scrape_timeout }}"
-            relabelConfigs: "{{ bbb_prometheus_scalelite_relabel_configs }}"
-            staticConfigs:
-              - targets:
-                  - "{{ scalelite_host }}:9100"
+          - targets:
+              - "{{ scalelite_host }}:9100"
