--- a/roles/scalelite/tasks/greenlight-locale.yml
+++ b/roles/scalelite/tasks/greenlight-locale.yml
@@ -1,32 +1,23 @@
 ---
 - name: Load file content
   ansible.builtin.uri:
-    url: "{{ item.1.source }}"
+    url: https://raw.githubusercontent.com/bigbluebutton/greenlight/refs/heads/master/app/assets/locales/de.json
     return_content: true
   register: bbb_greenlight_overlay_file
-  when: item.1.bbb_greenlight_overlay_type  == "json"
 
 - name: apply patch welcome json
   set_fact:
-    bbb_greenlight_overlay_file: "{{ bbb_greenlight_overlay_file | combine(item.1.greenlight_custom_patch) }}"
-  when: item.1.bbb_greenlight_overlay_type  == "json"
+    bbb_greenlight_overlay_file: "{{ ( bbb_greenlight_overlay_file | to_json | from_json).content | combine(item.bbb_greenlight_custom_locale) | to_nice_json }}"
 
 - name: Create docker volume
   ansible.builtin.file:
-    path: "/docker_volumes/content_overlay_{{ item.0.name }}_{{ item.1.overlay_name }}"
+    path: "/docker_volumes/content_overlay_{{ item.name }}_dejson"
     state: directory
     mode: '644'
 
 - name: Save patched json in docker_volume
   ansible.builtin.copy:
     content: "{{ bbb_greenlight_overlay_file }}"
-    dest: "/docker_volumes/content_overlay_{{ item.0.name }}_{{ item.1.overlay_name }}/{{ item.1.overlay_name }}"
+    dest: "/docker_volumes/content_overlay_{{ item.name }}_dejson/de.json"
   notify: Restart scalelite-nginx
-  when: item.1.bbb_greenlight_overlay_type  == "json"
-
-- name: Load and save css in docker_volume
-  copy:
-    src: "scalelite/{{ item.1.source }}"
-    dest: "/docker_volumes/content_overlay_{{ item.0.name }}_{{ item.1.overlay_name }}/{{ item.1.overlay_name }}"
-  notify: Restart scalelite-nginx
-  when: item.1.bbb_greenlight_overlay_type  == "css"
+  
