DBP-1571 improve PR

--- a/roles/scalelite/tasks/greenlight-locale.yml
+++ b/roles/scalelite/tasks/greenlight-locale.yml
@@ -5,22 +5,26 @@
     return_content: true
   register: bbb_greenlight_overlay_file
 
-- name: tidy json
-  set_fact:
-    bbb_greenlight_overlay_file: "{{ ( bbb_greenlight_overlay_file | to_json | from_json).content }}"
+# - name: tidy json
+#   set_fact:
+#     bbb_greenlight_overlay_file: "{{ ( bbb_greenlight_overlay_file | to_json | from_json).content }}"
+
+# - name: apply patch welcome json
+#   set_fact:
+#     bbb_greenlight_overlay_file: "{{ bbb_greenlight_overlay_file | combine(item.bbb_greenlight_custom_locale) }}"
 
 - name: apply patch welcome json
   set_fact:
-    bbb_greenlight_overlay_file: "{{ bbb_greenlight_overlay_file | combine(item.bbb_greenlight_custom_locale) }}"
+    bbb_greenlight_overlay_file: "{{ bbb_greenlight_overlay_file.content | from_json | combine(item.bbb_greenlight_custom_locale) }}"
 
 - name: Create docker volume
   ansible.builtin.file:
-    path: "/docker_volumes/content_overlay_{{ item.name }}_dejson"
+    path: "/{{ scalelite_docker_volumes_folder }}/greenlight/{{ item.name }}-locale"
     state: directory
     mode: '644'
 
 - name: Save patched json in docker_volume
   ansible.builtin.copy:
     content: "{{ bbb_greenlight_overlay_file }}"
-    dest: "/docker_volumes/content_overlay_{{ item.name }}_dejson/de.json"
+    dest: "/{{ scalelite_docker_volumes_folder }}/greenlight/{{ item.name }}-locale/de.json"
   notify: Restart scalelite-nginx
