OPS-1571 fix condition

--- a/roles/scalelite/tasks/docker_compose.yml
+++ b/roles/scalelite/tasks/docker_compose.yml
@@ -24,4 +24,4 @@
   community.docker.docker_compose_v2:
     project_src: "{{ scalelite_docker_compose_folder }}"
     remove_orphans: true
-  when: not check_mode
+  when: not ansible_check_mode
