Dbp 1571 bbb greenlight content fix in role (#21)
* DBP-1571-BBB-Greenlight-HH-logo-and-content-fix

* DBP-1571 fix config

* DBP-1571 fix template

* DBP-1571 debug

* DBP-1571 set loop var in template

* DBP-1571 clean up

* DBP-1571-BBB-Greenlight-content-fix-in-role

* DBP-1571-debug

* DBP-1571 add empty json file

* DBP-1571 add custom.scss

* DBP-1571 debug

* DBP-1571 fix compose file and nginx restart handler with compose

* DBP-1571 fix rules

* DBP-1571 debug

* DBP-1571 before cleanup

* DBP-1571 tidy

* DBP-1571 tidy

* DBP-1571 tidy

* DBP-1571 add extra-greenlight-certificates.yml

* DBP-1571 update PR

* DBP-1571 fix json patch

* DBP-1571 improve PR

* DBP-1571 fix PR remarks

* DBP-1571 fix check_mode

* OPS-1571 fix condition

* DBP-1571 add condion fix link

* DBP-1571 delete files in role

* DBP-1571 tidy link

* DBP-1571 fix compose file

---------

Co-authored-by: ralf.nelles.cap <ralf.nelles@capgemini.com>

--- a/roles/scalelite/handlers/main.yml
+++ b/roles/scalelite/handlers/main.yml
@@ -10,9 +10,10 @@
     restart: true
 
 - name: Restart scalelite-nginx
-  community.docker.docker_container:
-    name: scalelite-nginx
-    restart: true
+  community.docker.docker_compose_v2:
+    project_src: "{{ scalelite_docker_compose_folder }}"
+    state: restarted
+    services: scalelite-nginx
 
 - name: Restart bbb-autoscaler
   community.docker.docker_container:
