--- a/roles/scalelite/tasks/main.yml
+++ b/roles/scalelite/tasks/main.yml
@@ -166,6 +166,35 @@
       ConcurrentDatabaseReload no
   when: scalelite_clamav_enabled
 
+- name: Greenlight extra instances custom locale
+  include_tasks:
+    file: greenlight-locale.yml
+  loop: "{{ scalelite_greenlight_extra_instances }}"
+  loop_control:
+    label: "{{ item.name }}"
+  when: item.custom_locale is defined
+
+- name: Create Greenlight extra instances custom file mount docker_volume
+  ansible.builtin.file:
+    path: "{{ item.1.hostpath | dirname }}"
+    state: directory
+    mode: '644'
+  loop: "{{ scalelite_greenlight_extra_instances | selectattr('custom_mounts', 'defined') | subelements('custom_mounts') }}"
+  loop_control:
+    label: "{{ item.0.name }} - {{ item.1.hostpath }}:{{ item.1.mountpath }}"
+
+- name: Add file Greenlight extra instances custom file mounts
+  copy:
+    content: "{{ item.1.content }}"
+    dest: "{{ item.1.hostpath }}"
+    owner: root
+    group: root
+    mode: '0644'
+  notify: Restart scalelite-nginx
+  loop: "{{ scalelite_greenlight_extra_instances | selectattr('custom_mounts', 'defined') | subelements('custom_mounts') }}"
+  loop_control:
+    label: "{{ item.0.name }} - {{ item.1.hostpath }}:{{ item.1.mountpath }}"
+
 - name: Certbot
   include_tasks: certbot.yml
 
