--- a/roles/monitoring_bbb_crds/tasks/main.yml
+++ b/roles/monitoring_bbb_crds/tasks/main.yml
@@ -37,7 +37,7 @@
             name: "{{ bbb_node_exporter_basic_auth_secret_name }}"
             key: password
         jobName: "{{ bbb_instance_name }}-scalelite"
-        scheme: https 
+        scheme: HTTPS 
         metricsPath: /metrics
         scrapeInterval: "{{ bbb_monitoring_scrape_interval }}"
         scrapeTimeout: "{{ bbb_monitoring_scrape_timeout }}"
