fixed snake case and renamed ansible task

--- a/roles/monitoring_bbb_crds/defaults/main.yml
+++ b/roles/monitoring_bbb_crds/defaults/main.yml
@@ -2,10 +2,10 @@ bbb_monitoring_scrape_interval: 10s
 bbb_monitoring_scrape_timeout: 5s
 bbb_prometheus_scalelite_relabel_configs:
   # Rewrite hostname:port to hostname
-  - source_labels: [__address__]
-    target_label: instance
+  - sourceLabels: [__address__]
+    targetLabel: instance
     regex: "([^:]+)(:[0-9]+)?"
     replacement: "management.${1}"
   # Add the tenant label
-  - target_label: tenant
+  - targetLabel: tenant
     replacement: "{{ tenant }}"
